2009-04-04 Jesse Kornblum 

	* Version bump to 3.3 and released.
	

2009-03-26 Jesse Kornblum 

	* Updated timestamp code to support 64-bit functions on Windows.
	

2009-03-01 Jesse Kornblum 

	* Experimenting by skipping *all* junction points on
	  Windows. We'll display a message with 'unknown' status
	  values.

	* Version bump to 3.3-002.
	

2009-02-08 Jesse Kornblum 	

	* Removed email address from all files. Too many spammers, sorry.

	
2009-01-26 Jesse Kornblum 

	* Cleaned up code for version 3.2 release. Commented out NTFS
	  junction point detection for now. 

	* Applied patch 2535551 to Makefile.am to use LDADD variable
	  instead of AM_LDFLAGS.
	

2009-01-25 Jesse Kornblum 

	* Added experimental CSV mode, -c
	

2009-01-16 Jesse Kornblum 

	* Switching from /* comments to // comments in code to allow
	  for commenting out whole functions when necessary.

	* Added sanity checking to helper functions, changed some variable
	  names from single character values to more descriptive names.
	

2009-01-15 Jesse Kornblum 

	* Removed vestigial code from include/md5.h and the other
	  algorithms in that directory. This was code that had been
	  commented out for a while now.

	* Updated email address in this ChangeLog for all entries.

	* Added include directory to the 'make preflight' directive
	
	
2009-01-14 Jesse Kornblum 

	* Fixed chop_line call against uninitialized variable
	  in hashdeep/match.c. Added sanity checking to chop_line
	  to keep this from happening again.

	* Added file format documentation for hashdeep.

	
2009-01-09 Jesse Kornblum 

	* Changed hashdeep to break long command lines into multiple
	  lines in the headers of known files. Not doing so leads to
	  problems with extremely long lines. Those lines end up as
	  (harmless) warnings about bad hashes. See bug report 2496029
	  for more details.
	

2009-01-08 Jesse Kornblum 

	* Added detection and avoidance of NTFS Junction Points
	  to avoid infinite loops on Windows systems. 